simpleble_c/peripheral.h

    /**
     * @brief Releases all memory and resources consumed by the specific
     *        instance of simpleble_peripheral_t.
     *
     * @param handle
     */
    SIMPLEBLE_EXPORT void simpleble_peripheral_release_handle(simpleble_peripheral_t handle);
    /**
     * @brief
     *
     * @param handle
     * @param service
     * @param characteristic
     * @param callback
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t
    simpleble_peripheral_notify(simpleble_peripheral_t handle, simpleble_uuid_t service, simpleble_uuid_t characteristic,
                                void (*callback)(simpleble_uuid_t service, simpleble_uuid_t characteristic,
                                                 const uint8_t *data, size_t data_length, void *userdata),
                                void *userdata);
    /**
     * @brief
     *
     * @param handle
     * @param service
     * @param characteristic
     * @param callback
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t
    simpleble_peripheral_indicate(simpleble_peripheral_t handle, simpleble_uuid_t service, simpleble_uuid_t characteristic,
                                  void (*callback)(simpleble_uuid_t service, simpleble_uuid_t characteristic,
                                                   const uint8_t *data, size_t data_length, void *userdata),
                                  void *userdata);
    /**
     * @brief
     *
     * @param handle
     * @param callback
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t simpleble_peripheral_set_callback_on_connected(
        simpleble_peripheral_t handle, void (*callback)(simpleble_peripheral_t peripheral, void *userdata), void *userdata);
    /**
     * @brief
     *
     * @param handle
     * @param callback
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t simpleble_peripheral_set_callback_on_disconnected(
        simpleble_peripheral_t handle, void (*callback)(simpleble_peripheral_t peripheral, void *userdata), void *userdata);