lib/generated/generated_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

class NativeLibrary {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NativeLibrary(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NativeLibrary.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// @brief
  ///
  /// @return bool
  bool simpleble_adapter_is_bluetooth_enabled() {
    return _simpleble_adapter_is_bluetooth_enabled();
  }

  late final _simpleble_adapter_is_bluetooth_enabledPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>(
          'simpleble_adapter_is_bluetooth_enabled');
  late final _simpleble_adapter_is_bluetooth_enabled =
      _simpleble_adapter_is_bluetooth_enabledPtr.asFunction<bool Function()>();

  /// @brief
  ///
  /// @return size_t
  int simpleble_adapter_get_count() {
    return _simpleble_adapter_get_count();
  }

  late final _simpleble_adapter_get_countPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>(
          'simpleble_adapter_get_count');
  late final _simpleble_adapter_get_count =
      _simpleble_adapter_get_countPtr.asFunction<int Function()>();

  /// @brief
  ///
  /// @note The user is responsible for freeing the returned adapter object
  /// by calling `simpleble_adapter_release_handle`.
  ///
  /// @param index
  /// @return simpleble_adapter_t
  simpleble_adapter_t simpleble_adapter_get_handle(
    int index,
  ) {
    return _simpleble_adapter_get_handle(
      index,
    );
  }

  late final _simpleble_adapter_get_handlePtr =
      _lookup<ffi.NativeFunction<simpleble_adapter_t Function(ffi.Size)>>(
          'simpleble_adapter_get_handle');
  late final _simpleble_adapter_get_handle = _simpleble_adapter_get_handlePtr
      .asFunction<simpleble_adapter_t Function(int)>();

  /// @brief Releases all memory and resources consumed by the specific
  /// instance of simpleble_adapter_t.
  ///
  /// @param handle
  void simpleble_adapter_release_handle(
    simpleble_adapter_t handle,
  ) {
    return _simpleble_adapter_release_handle(
      handle,
    );
  }

  late final _simpleble_adapter_release_handlePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(simpleble_adapter_t)>>(
          'simpleble_adapter_release_handle');
  late final _simpleble_adapter_release_handle =
      _simpleble_adapter_release_handlePtr
          .asFunction<void Function(simpleble_adapter_t)>();

  /// @brief Returns the identifier of a given adapter.
  ///
  /// @note The user is responsible for freeing the returned value.
  ///
  /// @param handle
  /// @return char*
  ffi.Pointer<ffi.Char> simpleble_adapter_identifier(
    simpleble_adapter_t handle,
  ) {
    return _simpleble_adapter_identifier(
      handle,
    );
  }

  late final _simpleble_adapter_identifierPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<ffi.Char> Function(simpleble_adapter_t)>>(
      'simpleble_adapter_identifier');
  late final _simpleble_adapter_identifier = _simpleble_adapter_identifierPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(simpleble_adapter_t)>();

  /// @brief Returns the MAC address of a given adapter.
  ///
  /// @note The user is responsible for freeing the returned value.
  ///
  /// @param handle
  /// @return char*
  ffi.Pointer<ffi.Char> simpleble_adapter_address(
    simpleble_adapter_t handle,
  ) {
    return _simpleble_adapter_address(
      handle,
    );
  }

  late final _simpleble_adapter_addressPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<ffi.Char> Function(simpleble_adapter_t)>>(
      'simpleble_adapter_address');
  late final _simpleble_adapter_address = _simpleble_adapter_addressPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(simpleble_adapter_t)>();

  /// @brief
  ///
  /// @param handle
  /// @return simpleble_err_t
  int simpleble_adapter_scan_start(
    simpleble_adapter_t handle,
  ) {
    return _simpleble_adapter_scan_start(
      handle,
    );
  }

  late final _simpleble_adapter_scan_startPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(simpleble_adapter_t)>>(
          'simpleble_adapter_scan_start');
  late final _simpleble_adapter_scan_start = _simpleble_adapter_scan_startPtr
      .asFunction<int Function(simpleble_adapter_t)>();

  /// @brief
  ///
  /// @param handle
  /// @return simpleble_err_t
  int simpleble_adapter_scan_stop(
    simpleble_adapter_t handle,
  ) {
    return _simpleble_adapter_scan_stop(
      handle,
    );
  }

  late final _simpleble_adapter_scan_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(simpleble_adapter_t)>>(
          'simpleble_adapter_scan_stop');
  late final _simpleble_adapter_scan_stop = _simpleble_adapter_scan_stopPtr
      .asFunction<int Function(simpleble_adapter_t)>();

  /// @brief
  ///
  /// @param handle
  /// @param active
  /// @return simpleble_err_t
  int simpleble_adapter_scan_is_active(
    simpleble_adapter_t handle,
    ffi.Pointer<ffi.Bool> active,
  ) {
    return _simpleble_adapter_scan_is_active(
      handle,
      active,
    );
  }

  late final _simpleble_adapter_scan_is_activePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(simpleble_adapter_t,
              ffi.Pointer<ffi.Bool>)>>('simpleble_adapter_scan_is_active');
  late final _simpleble_adapter_scan_is_active =
      _simpleble_adapter_scan_is_activePtr.asFunction<
          int Function(simpleble_adapter_t, ffi.Pointer<ffi.Bool>)>();

  /// @brief
  ///
  /// @param handle
  /// @param timeout_ms
  /// @return simpleble_err_t
  int simpleble_adapter_scan_for(
    simpleble_adapter_t handle,
    int timeout_ms,
  ) {
    return _simpleble_adapter_scan_for(
      handle,
      timeout_ms,
    );
  }

  late final _simpleble_adapter_scan_forPtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(simpleble_adapter_t, ffi.Int)>>(
      'simpleble_adapter_scan_for');
  late final _simpleble_adapter_scan_for = _simpleble_adapter_scan_forPtr
      .asFunction<int Function(simpleble_adapter_t, int)>();

  /// @brief
  ///
  /// @param handle
  /// @return size_t
  int simpleble_adapter_scan_get_results_count(
    simpleble_adapter_t handle,
  ) {
    return _simpleble_adapter_scan_get_results_count(
      handle,
    );
  }

  late final _simpleble_adapter_scan_get_results_countPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(simpleble_adapter_t)>>(
          'simpleble_adapter_scan_get_results_count');
  late final _simpleble_adapter_scan_get_results_count =
      _simpleble_adapter_scan_get_results_countPtr
          .asFunction<int Function(simpleble_adapter_t)>();

  /// @brief
  ///
  /// @note The user is responsible for freeing the returned peripheral object
  /// by calling `simpleble_peripheral_release_handle`.
  ///
  /// @param handle
  /// @param index
  /// @return simpleble_peripheral_t
  simpleble_peripheral_t simpleble_adapter_scan_get_results_handle(
    simpleble_adapter_t handle,
    int index,
  ) {
    return _simpleble_adapter_scan_get_results_handle(
      handle,
      index,
    );
  }

  late final _simpleble_adapter_scan_get_results_handlePtr = _lookup<
      ffi.NativeFunction<
          simpleble_peripheral_t Function(simpleble_adapter_t,
              ffi.Size)>>('simpleble_adapter_scan_get_results_handle');
  late final _simpleble_adapter_scan_get_results_handle =
      _simpleble_adapter_scan_get_results_handlePtr.asFunction<
          simpleble_peripheral_t Function(simpleble_adapter_t, int)>();

  /// @brief
  ///
  /// @param handle
  /// @return size_t
  int simpleble_adapter_get_paired_peripherals_count(
    simpleble_adapter_t handle,
  ) {
    return _simpleble_adapter_get_paired_peripherals_count(
      handle,
    );
  }

  late final _simpleble_adapter_get_paired_peripherals_countPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(simpleble_adapter_t)>>(
          'simpleble_adapter_get_paired_peripherals_count');
  late final _simpleble_adapter_get_paired_peripherals_count =
      _simpleble_adapter_get_paired_peripherals_countPtr
          .asFunction<int Function(simpleble_adapter_t)>();

  /// @brief
  ///
  /// @note The user is responsible for freeing the returned peripheral object
  /// by calling `simpleble_peripheral_release_handle`.
  ///
  /// @param handle
  /// @param index
  /// @return simpleble_peripheral_t
  simpleble_peripheral_t simpleble_adapter_get_paired_peripherals_handle(
    simpleble_adapter_t handle,
    int index,
  ) {
    return _simpleble_adapter_get_paired_peripherals_handle(
      handle,
      index,
    );
  }

  late final _simpleble_adapter_get_paired_peripherals_handlePtr = _lookup<
      ffi.NativeFunction<
          simpleble_peripheral_t Function(simpleble_adapter_t,
              ffi.Size)>>('simpleble_adapter_get_paired_peripherals_handle');
  late final _simpleble_adapter_get_paired_peripherals_handle =
      _simpleble_adapter_get_paired_peripherals_handlePtr.asFunction<
          simpleble_peripheral_t Function(simpleble_adapter_t, int)>();

  /// @brief
  ///
  /// @param handle
  /// @param callback
  /// @return simpleble_err_t
  int simpleble_adapter_set_callback_on_scan_start(
    simpleble_adapter_t handle,
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Void Function(simpleble_adapter_t adapter,
                    ffi.Pointer<ffi.Void> userdata)>>
        callback,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    return _simpleble_adapter_set_callback_on_scan_start(
      handle,
      callback,
      userdata,
    );
  }

  late final _simpleble_adapter_set_callback_on_scan_startPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int32 Function(
                  simpleble_adapter_t,
                  ffi.Pointer<
                      ffi.NativeFunction<
                          ffi.Void Function(simpleble_adapter_t adapter,
                              ffi.Pointer<ffi.Void> userdata)>>,
                  ffi.Pointer<ffi.Void>)>>(
      'simpleble_adapter_set_callback_on_scan_start');
  late final _simpleble_adapter_set_callback_on_scan_start =
      _simpleble_adapter_set_callback_on_scan_startPtr.asFunction<
          int Function(
              simpleble_adapter_t,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Void Function(simpleble_adapter_t adapter,
                          ffi.Pointer<ffi.Void> userdata)>>,
              ffi.Pointer<ffi.Void>)>();

  /// @brief
  ///
  /// @param handle
  /// @param callback
  /// @return simpleble_err_t
  int simpleble_adapter_set_callback_on_scan_stop(
    simpleble_adapter_t handle,
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Void Function(simpleble_adapter_t adapter,
                    ffi.Pointer<ffi.Void> userdata)>>
        callback,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    return _simpleble_adapter_set_callback_on_scan_stop(
      handle,
      callback,
      userdata,
    );
  }
